--- a/FeedAppClient/Assets/css/app.css
+++ b/FeedAppClient/Assets/css/app.css
@@ -2,7 +2,15 @@ body {
     background-color: #265E7F;
 }
 
+.top-bar {
+    top: 0;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+}
+
 .main {
+    margin-top: 36px;
     padding: 25px 15px 15px 15px
 }
 
@@ -13,34 +21,33 @@ body {
 
 }
 
-.movie {
+.article {
     background: #fefefe;
     border: 1px solid #8a8a8a;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     margin: 1rem 1rem 0 0;
     padding: 5px;
     overflow: hidden;
+    word-wrap: break-word;
     border-radius: 0;
     width: 90%;
     float: left;
 }
 
-.movie-info {
-    
+.article-card:hover {
+    cursor: pointer;
+    background: #e6e6e6;
+}
+
+.article-full {
+    padding: 30px;
+}
+
+.article-full p{
+    margin-left: 15px;
 }
 
 .button:active {
     background-color: #fefefe;
     color: #1779ba
-}
-
-.control-area {
-    padding: 15px 0 0 10px;
-    background: #fefefe;
-    border: 1px solid #8a8a8a;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-.control-area-selectbox {
-    padding-left: 20px;
 }
